--- a/mongodb/mongodb.yaml
+++ b/mongodb/mongodb.yaml
@@ -1,4 +1,5 @@
 apiVersion: apps/v1
+kind: Pod
 metadata:
   name: mongodb-deployment
   namespace: openfaas-fn
@@ -20,7 +21,7 @@ spec:
         ports:
         - containerPort: 27017
 
-
+---
 apiVersion: apps/v1
 kind: Service
 metadata:
