--- a/mongodb/mongodb.yaml
+++ b/mongodb/mongodb.yaml
@@ -22,7 +22,7 @@ spec:
         - containerPort: 27017
 
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
