--- a/faas/faas.yml
+++ b/faas/faas.yml
@@ -4,13 +4,46 @@ provider:
   gateway: http://127.0.0.1:8080
 functions:
   get-products:
-    lang: python3
+    lang: python3-http
     handler: ./get-products
     image: serverlessshoppingcart/get-products:latest
     common_files: true
 
   get-product:
-    lang: python3
+    lang: python3-http
     handler: ./get-product
     image: serverlessshoppingcart/get-product:latest
     common_files: true
+
+  add-to-cart:
+    lang: python3
+    handler: ./add-to-cart
+    image: serverlessshoppingcart/add-to-cart:latest
+    common_files: true
+    environment:
+        PRODUCT_SERVICE_URL: get-product.openfaas-fn.svc.cluster.local
+        MONGODB_SERVICE_URL: mongodb-service.openfaas-fn.svc.cluster.local
+        
+  list-cart:
+    lang: python3-http
+    handler: ./list-cart
+    image: serverlessshoppingcart/list-cart:latest
+    common_files: true
+    build_args:
+        TEST_ENABLED: false
+    environment:
+        PRODUCT_SERVICE_URL: get-product.openfaas-fn.svc.cluster.local
+        MONGODB_SERVICE_URL: mongodb-service.openfaas-fn.svc.cluster.local
+
+  update-cart:
+    lang: python3-http
+    handler: ./update-cart
+    image: serverlessshoppingcart/update-cart:latest
+    common_files: true
+    build_args:
+        TEST_ENABLED: false
+    environment:
+        PRODUCT_SERVICE_URL: get-product.openfaas-fn.svc.cluster.local
+        MONGODB_SERVICE_URL: mongodb-service.openfaas-fn.svc.cluster.local
+
+
