--- a/frontend/frontend-dep.yaml
+++ b/frontend/frontend-dep.yaml
@@ -20,19 +20,18 @@ spec:
         image: serverlessshoppingcart/frontend:latest
         ports:
         - containerPort: 8088
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-service
+  name: frontend
   namespace: openfaas-fn
 spec:
-  internalTrafficPolicy: Cluster
-  type: ClusterIP
   selector:
-    app: frontend-app
+    app: hello
+    tier: frontend
   ports:
-    - protocol: TCP
-      port: 8088
-
+  - protocol: "TCP"
+    port: 80
+    targetPort: 80
+  type: LoadBalancer
