--- a/frontend/frontend-dep.yaml
+++ b/frontend/frontend-dep.yaml
@@ -18,8 +18,10 @@ spec:
       containers:
       - name: serverlessshoppingcart-frontend
         image: serverlessshoppingcart/frontend:latest
+        command: [ "/bin/bash", "-ce", "tail -f /dev/null" ]
         ports:
         - containerPort: 8088
+
 ---
 apiVersion: v1
 kind: Service
