--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-amplify": "^1.2.3",
     "aws-amplify-vue": "^0.3.3",
+    "axios": "^0.27.2",
     "core-js": "^3.3.2",
     "decimal.js": "^10.2.0",
     "dotenv": "^8.2.0",
