--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "decimal.js": "^10.2.0",
     "dotenv": "^8.2.0",
     "v-mask": "^2.0.2",
-    "vue": "^2.6.10",
+    "vue": "2.6.14",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^2.1.7",
@@ -32,7 +32,7 @@
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
     "vue-cli-plugin-vuetify": "^2.0.2",
-    "vue-template-compiler": "^2.6.10",
+    "vue-template-compiler": "2.6.14",
     "vuetify-loader": "^1.3.0"
   },
   "resolutions": {
@@ -44,7 +44,6 @@
     "set-value": "^4.0.1",
     "ansi-regex": "^5.0.1",
     "nth-check": "^2.0.1",
-    "aws-sdk": "^2.814.0",
     "node-forge": "^1.0.0"
   },
   "eslintConfig": {
